--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,31 @@
   color: #333;
   background-color: #f3e4d7;
 }
+
+.error-msg {
+  color: "red";
+  margin-bottom: "10px";
+}
+
+.fetch-latest {
+  margin-bottom: "10px";
+  font-size: "14px"
+}
+
+.button {
+  margin-left: 10px;
+  padding: 8px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: "pointer";
+}
+
+select {
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 14px;
+}
